# aobench

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  clear_report.json  compose.yml  mkdocs.yml  pyproject.toml  versions.json
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/framework/: index.html
0.1.0/overrides/: main.html
0.1.0/stylesheets/: extra.css
benchmark/configs/: error_taxonomy.yaml  hpc_tool_catalog.yaml  scoring_profiles.yaml  tool_registry.yaml
benchmark/environments/: registry.csv
benchmark/scorer_audit/: string_equiv_classes.yaml
benchmark/tasks/: dataset_splits.py  lite_manifest_v1.json  registry.csv  registry_notes.md  task_set_v1.json  task_set_v2.json  task_set_v3.json
data/: judge_config.json
data/ablations/: clear_weights.json  cup_threshold.json  difficulty.json
data/fidelity/: REPORT.md  env_01.md  env_02.md  env_03.md  env_04.md  env_05.md  env_06.md  env_07.md  env_08.md  env_09.md  env_10.md  env_11.md  env_12.md  env_13.md  env_14.md  env_15.md  env_16.md  env_17.md  env_18.md  env_19.md  (+8 more)
dev/: 404.html  index.html  sitemap.xml
docs/: 04-implementation-improvements.md  COMMANDS.md  adapters-and-tools.md  architecture-clarification.md  benchmark-status-and-design.md  chat-outcomes.md  docs-integration-plan.md  index.md  langfuse-integration.md  langfuse.md  roadmap.md
notebooks/: read_data.ipynb
paper/: exabench_v01.tex  references.bib
scripts/: ablate_clear_weights.py  ablate_cup_threshold.py  ablate_difficulty.py  build_snapshot_manifest.py  check_coverage.py  check_validity_gates.py  check_versions.sh  compute_icc.py  compute_krippendorff.py  compute_stats.py  cost_check.py  create_rbac_policy_docs.py  create_task_stubs.py  cross_judge_ranking.py  error_crosstab.py  fill_task_metadata.py  freeze_judge_config.py  generate_bundles.py  generate_rbac_docs.py  generate_rubric_validation_responses.py  generate_tool_docs.py  independence_check.py  make_paper_table1.py  make_paper_table2.py  make_paper_table3.py  make_paper_table4.py  oracle_check.py  run_ollama_batch.py  smoke_keys.py  stochastic_stability.py  trace_diff.py  upgrade_rbac_yaml.py  verify_snapshots.py  verify_submission.py
tests/: conftest.py
v0.1/: 404.html  index.html  sitemap.xml
v0.1.0/: 404.html  index.html  sitemap.xml
(+801 files in other folders)
